[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://textures/lib/themes/MainMenu.tres" type="Theme" id=2]
[ext_resource path="res://textures/lib/fonts/Cinzel/Cinzel-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://textures/UI/MainMenuButtons/button_icon_settings_1_64x64.png" type="Texture" id=4]
[ext_resource path="res://textures/UI/MainMenuButtons/button_icon_profile_1_64x64_normal.png" type="Texture" id=5]
[ext_resource path="res://scenes/LabelServerTypePlaceholder.gd" type="Script" id=6]
[ext_resource path="res://textures/UI/Border and Panels Menu Part 1/01 Border 01.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "show"
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="StyleBoxEmpty" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -102.5
margin_right = 102.5
margin_bottom = 59.0
theme_type_variation = @"Title"
text = "Mota"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 100.0
margin_right = 210.0
margin_bottom = 320.0

[node name="NinePatchRectPlay" type="NinePatchRect" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="ButtonHost" type="Button" parent="VBoxContainer/NinePatchRectPlay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
hint_tooltip = "Play by yourself or host a server for multiplayer."
focus_mode = 0
theme_type_variation = @"MainMenuButton"
enabled_focus_mode = 0
text = "Host server"

[node name="NinePatchRectHost" type="NinePatchRect" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 200.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="ButtonConnect" type="Button" parent="VBoxContainer/NinePatchRectHost"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
hint_tooltip = "Join a server on your network."
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = @"MainMenuButton"
enabled_focus_mode = 0
text = "Connect"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 200.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ControlPlaceholder1" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 10.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 14.0
margin_right = 90.0
margin_bottom = 76.0
rect_min_size = Vector2( 76, 76 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="ButtonProfile" type="Button" parent="VBoxContainer/HBoxContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
theme_type_variation = @"MainMenuButton1x1"
icon = ExtResource( 5 )

[node name="ControlPlaceholder2" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 94.0
margin_right = 105.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NinePatchRect2" type="NinePatchRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 109.0
margin_right = 185.0
margin_bottom = 76.0
rect_min_size = Vector2( 76, 76 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="ButtonSettings" type="Button" parent="VBoxContainer/HBoxContainer/NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
theme_type_variation = @"MainMenuButton1x1"
icon = ExtResource( 4 )

[node name="Controlplaceholder3" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 189.0
margin_right = 200.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabsMenu" type="TabContainer" parent="."]
margin_left = 220.0
margin_top = 100.0
margin_right = 620.0
margin_bottom = 320.0
tabs_visible = false

[node name="MenuHost" type="NinePatchRect" parent="TabsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
region_rect = Rect2( 65, 1, 62, 62 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="TabsMenu/MenuHost"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -49.0

[node name="VBoxContainerLabels" type="VBoxContainer" parent="TabsMenu/MenuHost/HBoxContainer"]
margin_right = 125.0
margin_bottom = 161.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="LabelWorldName" type="Label" parent="TabsMenu/MenuHost/HBoxContainer/VBoxContainerLabels"]
margin_top = 3.0
margin_right = 125.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Name: "

[node name="LabelWorldDescription" type="Label" parent="TabsMenu/MenuHost/HBoxContainer/VBoxContainerLabels"]
margin_top = 36.0
margin_right = 125.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Description:"

[node name="LabelServerMode" type="Label" parent="TabsMenu/MenuHost/HBoxContainer/VBoxContainerLabels"]
margin_top = 69.0
margin_right = 125.0
margin_bottom = 91.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Mode:"

[node name="LabelServerPlayerLimit" type="Label" parent="TabsMenu/MenuHost/HBoxContainer/VBoxContainerLabels"]
margin_top = 102.0
margin_right = 125.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Players:"

[node name="LabelHostPort" type="Label" parent="TabsMenu/MenuHost/HBoxContainer/VBoxContainerLabels"]
margin_top = 135.0
margin_right = 125.0
margin_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Port:"

[node name="VBoxContainerOptions" type="VBoxContainer" parent="TabsMenu/MenuHost/HBoxContainer"]
margin_left = 129.0
margin_right = 380.0
margin_bottom = 161.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EditWorldName" type="LineEdit" parent="TabsMenu/MenuHost/HBoxContainer/VBoxContainerOptions"]
margin_right = 251.0
margin_bottom = 32.0
focus_next = NodePath("../EditWorldDescription")
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
clear_button_enabled = true
placeholder_text = "Name your world"

[node name="EditWorldDescription" type="LineEdit" parent="TabsMenu/MenuHost/HBoxContainer/VBoxContainerOptions"]
margin_top = 36.0
margin_right = 251.0
margin_bottom = 63.0
focus_next = NodePath("../EditPlayerCount")
focus_previous = NodePath("../EditWorldName")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
align = 1
clear_button_enabled = true
placeholder_text = "Describe your world"

[node name="LabelServerTypePlaceholder" type="Label" parent="TabsMenu/MenuHost/HBoxContainer/VBoxContainerOptions"]
margin_top = 67.0
margin_right = 251.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "What"
align = 1
valign = 1
percent_visible = 0.0
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TabsMenu/MenuHost/HBoxContainer/VBoxContainerOptions/LabelServerTypePlaceholder"]
anims/RESET = SubResource( 2 )
anims/hide = SubResource( 3 )
anims/show = SubResource( 4 )

[node name="EditPlayerCount" type="SpinBox" parent="TabsMenu/MenuHost/HBoxContainer/VBoxContainerOptions"]
margin_top = 93.0
margin_right = 251.0
margin_bottom = 125.0
focus_next = NodePath("../EditHostPort")
focus_previous = NodePath("../EditWorldDescription")
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
value = 10.0
rounded = true
align = 1

[node name="EditHostPort" type="SpinBox" parent="TabsMenu/MenuHost/HBoxContainer/VBoxContainerOptions"]
margin_top = 129.0
margin_right = 251.0
margin_bottom = 161.0
hint_tooltip = "Greater than 1024 is preferred."
focus_next = NodePath("../../../NinePatchRectHost/ButtonHost")
focus_previous = NodePath("../EditPlayerCount")
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 65535.0
value = 57546.0
rounded = true
align = 1

[node name="NinePatchRectHost" type="NinePatchRect" parent="TabsMenu/MenuHost"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -48.0
margin_right = 40.0
margin_bottom = -8.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
__meta__ = {
"_edit_group_": true
}

[node name="ButtonHost" type="Button" parent="TabsMenu/MenuHost/NinePatchRectHost"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
hint_tooltip = "Ready?"
focus_previous = NodePath("../../HBoxContainer/VBoxContainerOptions/EditHostPort")
focus_mode = 0
enabled_focus_mode = 0
text = "Start"

[node name="MenuConnect" type="NinePatchRect" parent="TabsMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 180 )
texture = ExtResource( 7 )
region_rect = Rect2( 65, 1, 62, 62 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="NinePatchRectServerList" type="NinePatchRect" parent="TabsMenu/MenuConnect"]
margin_left = 40.0
margin_top = -40.0
margin_right = 200.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
__meta__ = {
"_edit_group_": true
}

[node name="ButtonServerList" type="Button" parent="TabsMenu/MenuConnect/NinePatchRectServerList"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 140, 0 )
text = "Server List"

[node name="NinePatchRectDirectConnect" type="NinePatchRect" parent="TabsMenu/MenuConnect"]
margin_left = 200.0
margin_top = -40.0
margin_right = 360.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
__meta__ = {
"_edit_group_": true
}

[node name="ButtonDirectConnect" type="Button" parent="TabsMenu/MenuConnect/NinePatchRectDirectConnect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 140, 0 )
text = "Direct Connect"

[node name="TabsConnectionModes" type="TabContainer" parent="TabsMenu/MenuConnect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )
tabs_visible = false

[node name="ServerList" type="Control" parent="TabsMenu/MenuConnect/TabsConnectionModes"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainerServerList" type="VBoxContainer" parent="TabsMenu/MenuConnect/TabsConnectionModes/ServerList"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Label" type="Label" parent="TabsMenu/MenuConnect/TabsConnectionModes/ServerList/VBoxContainerServerList"]
margin_right = 380.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
text = "Available Servers:"

[node name="ScrollContainer" type="ScrollContainer" parent="TabsMenu/MenuConnect/TabsConnectionModes/ServerList/VBoxContainerServerList"]
margin_top = 36.0
margin_right = 380.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabsMenu/MenuConnect/TabsConnectionModes/ServerList/VBoxContainerServerList/ScrollContainer"]
margin_right = 380.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DirectConnect" type="Control" parent="TabsMenu/MenuConnect/TabsConnectionModes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainerDirectConnect" type="HBoxContainer" parent="TabsMenu/MenuConnect/TabsConnectionModes/DirectConnect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -50.0

[node name="VBoxContainerLabels" type="VBoxContainer" parent="TabsMenu/MenuConnect/TabsConnectionModes/DirectConnect/HBoxContainerDirectConnect"]
margin_right = 125.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="LabelServerIp" type="Label" parent="TabsMenu/MenuConnect/TabsConnectionModes/DirectConnect/HBoxContainerDirectConnect/VBoxContainerLabels"]
margin_right = 125.0
margin_bottom = 22.0
text = "Ip:"

[node name="LabelServerPort" type="Label" parent="TabsMenu/MenuConnect/TabsConnectionModes/DirectConnect/HBoxContainerDirectConnect/VBoxContainerLabels"]
margin_top = 26.0
margin_right = 125.0
margin_bottom = 48.0
text = "Port:"

[node name="VBoxContainerOptions" type="VBoxContainer" parent="TabsMenu/MenuConnect/TabsConnectionModes/DirectConnect/HBoxContainerDirectConnect"]
margin_left = 129.0
margin_right = 380.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EditServerIp" type="LineEdit" parent="TabsMenu/MenuConnect/TabsConnectionModes/DirectConnect/HBoxContainerDirectConnect/VBoxContainerOptions"]
margin_right = 251.0
margin_bottom = 32.0
hint_tooltip = "The Ip address of remote server."
align = 1
clear_button_enabled = true
placeholder_text = "127.0.0.1"

[node name="EditServerPort" type="SpinBox" parent="TabsMenu/MenuConnect/TabsConnectionModes/DirectConnect/HBoxContainerDirectConnect/VBoxContainerOptions"]
margin_top = 36.0
margin_right = 251.0
margin_bottom = 68.0
hint_tooltip = "The Port of the remote server."
max_value = 65535.0
value = 57546.0
align = 1

[node name="NinePatchRectConnect" type="NinePatchRect" parent="TabsMenu/MenuConnect/TabsConnectionModes/DirectConnect"]
margin_left = 140.0
margin_top = 170.0
margin_right = 240.0
margin_bottom = 210.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="ButtonConnect" type="Button" parent="TabsMenu/MenuConnect/TabsConnectionModes/DirectConnect/NinePatchRectConnect"]
anchor_right = 1.0
anchor_bottom = 1.0
hint_tooltip = "Ready?"
focus_mode = 0
theme_type_variation = @"MainMenuButton"
enabled_focus_mode = 0
text = "join"

[node name="MenuProfile" type="NinePatchRect" parent="TabsMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
region_rect = Rect2( 65, 1, 62, 62 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="VBoxContainerProfile" type="VBoxContainer" parent="TabsMenu/MenuProfile"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="ListProfiles" type="ItemList" parent="TabsMenu/MenuProfile/VBoxContainerProfile"]
margin_right = 380.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainerOptions" type="HBoxContainer" parent="TabsMenu/MenuProfile/VBoxContainerProfile"]
margin_top = 128.0
margin_right = 380.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="NinePatchRectAdd" type="NinePatchRect" parent="TabsMenu/MenuProfile/VBoxContainerProfile/HBoxContainerOptions"]
margin_right = 124.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="ButtonAdd" type="Button" parent="TabsMenu/MenuProfile/VBoxContainerProfile/HBoxContainerOptions/NinePatchRectAdd"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
hint_tooltip = "Add a new profile"
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = @"MainMenuButton"
text = "Add"

[node name="NinePatchRectRemove" type="NinePatchRect" parent="TabsMenu/MenuProfile/VBoxContainerProfile/HBoxContainerOptions"]
margin_left = 128.0
margin_right = 252.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="ButtonRemove" type="Button" parent="TabsMenu/MenuProfile/VBoxContainerProfile/HBoxContainerOptions/NinePatchRectRemove"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
hint_tooltip = "Remove selected profile"
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = @"MainMenuButton"
text = "Remove"

[node name="NinePatchRectEdit" type="NinePatchRect" parent="TabsMenu/MenuProfile/VBoxContainerProfile/HBoxContainerOptions"]
margin_left = 256.0
margin_right = 380.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="ButtonEdit" type="Button" parent="TabsMenu/MenuProfile/VBoxContainerProfile/HBoxContainerOptions/NinePatchRectEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
hint_tooltip = "Edit selected profile"
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = @"MainMenuButton"
text = "Edit"

[node name="NinePatchRect" type="NinePatchRect" parent="TabsMenu/MenuProfile/VBoxContainerProfile"]
margin_top = 170.0
margin_right = 380.0
margin_bottom = 200.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="ButtonApply" type="Button" parent="TabsMenu/MenuProfile/VBoxContainerProfile/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
hint_tooltip = "Set the selected profile as current"
theme_type_variation = @"MainMenuButton"
text = "Apply"

[node name="PopupProfileNamer" type="Popup" parent="TabsMenu/MenuProfile"]
margin_right = 500.0
margin_bottom = 150.0
popup_exclusive = true

[node name="Panel" type="Panel" parent="TabsMenu/MenuProfile/PopupProfileNamer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="TabsMenu/MenuProfile/PopupProfileNamer/Panel"]
anchor_right = 1.0
margin_bottom = 28.0
text = "Name the profile: "
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="TabsMenu/MenuProfile/PopupProfileNamer/Panel"]
margin_top = 50.0
margin_right = 500.0
margin_bottom = 100.0
align = 1
placeholder_text = "NewProfileName"

[node name="ButtonAccept" type="Button" parent="TabsMenu/MenuProfile/PopupProfileNamer/Panel"]
margin_left = 70.0
margin_top = 104.0
margin_right = 196.0
margin_bottom = 146.0
theme_type_variation = @"MainMenuButton"
text = "Aceept"

[node name="ButtonCancel" type="Button" parent="TabsMenu/MenuProfile/PopupProfileNamer/Panel"]
margin_left = 270.0
margin_top = 104.0
margin_right = 396.0
margin_bottom = 146.0
theme_type_variation = @"MainMenuButton"
text = "Cancel"

[node name="MenuSettings" type="NinePatchRect" parent="TabsMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
region_rect = Rect2( 65, 1, 62, 62 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="LabelCurrentProfile" type="Label" parent="."]
margin_top = 330.0
margin_right = 500.0
margin_bottom = 360.0
text = "Current Profile: "

[connection signal="pressed" from="VBoxContainer/NinePatchRectPlay/ButtonHost" to="." method="set_menu_to" binds= [ 0 ]]
[connection signal="pressed" from="VBoxContainer/NinePatchRectHost/ButtonConnect" to="." method="set_menu_to" binds= [ 1 ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NinePatchRect/ButtonProfile" to="." method="set_menu_to" binds= [ 2 ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NinePatchRect2/ButtonSettings" to="." method="set_menu_to" binds= [ 3 ]]
[connection signal="mouse_entered" from="TabsMenu/MenuHost/HBoxContainer/VBoxContainerOptions/LabelServerTypePlaceholder" to="TabsMenu/MenuHost/HBoxContainer/VBoxContainerOptions/LabelServerTypePlaceholder" method="_on_LabelServerTypePlaceholder_mouse_entered"]
[connection signal="mouse_exited" from="TabsMenu/MenuHost/HBoxContainer/VBoxContainerOptions/LabelServerTypePlaceholder" to="TabsMenu/MenuHost/HBoxContainer/VBoxContainerOptions/LabelServerTypePlaceholder" method="_on_LabelServerTypePlaceholder_mouse_exited"]
[connection signal="pressed" from="TabsMenu/MenuHost/NinePatchRectHost/ButtonHost" to="." method="host_server"]
[connection signal="pressed" from="TabsMenu/MenuConnect/NinePatchRectServerList/ButtonServerList" to="." method="set_connect_mode_to" binds= [ 0 ]]
[connection signal="pressed" from="TabsMenu/MenuConnect/NinePatchRectDirectConnect/ButtonDirectConnect" to="." method="set_connect_mode_to" binds= [ 1 ]]
[connection signal="pressed" from="TabsMenu/MenuConnect/TabsConnectionModes/DirectConnect/NinePatchRectConnect/ButtonConnect" to="." method="connect_to_server"]
[connection signal="pressed" from="TabsMenu/MenuProfile/VBoxContainerProfile/HBoxContainerOptions/NinePatchRectAdd/ButtonAdd" to="." method="create_profile"]
[connection signal="pressed" from="TabsMenu/MenuProfile/VBoxContainerProfile/HBoxContainerOptions/NinePatchRectRemove/ButtonRemove" to="." method="remove_profile"]
[connection signal="pressed" from="TabsMenu/MenuProfile/VBoxContainerProfile/HBoxContainerOptions/NinePatchRectEdit/ButtonEdit" to="." method="edit_profile"]
[connection signal="pressed" from="TabsMenu/MenuProfile/VBoxContainerProfile/NinePatchRect/ButtonApply" to="." method="set_profile"]
